@@ -1,3 +1,8 @@
+2015-03-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* XeTeX_ext.c: The SELFAUTOLOC issue has been considered on W32
+	independently.
+
 2015-03-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* xetex-bug73.test: The equivalent of 'tail -n+2' is 'sed 1d'.
